fix portfolio modal text alignment, change navbar background change scroll position

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -860,6 +860,10 @@ ul.social-buttons li a:active {
     box-shadow: none;
 }
 
+.portfolio-content {
+  text-align: left;
+}
+
 .portfolio-modal .modal-content h2 {
     margin-bottom: 15px;
     font-size: 3em;
